--- a/DOM-practise/style.css
+++ b/DOM-practise/style.css
@@ -1,3 +1,15 @@
 body {
     background-color: coral;
 }
+
+.autos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    padding: 20px;
+}
+
+.autoCard {
+    background: #fff;
+    padding: 20px;
+}
